tests/parsing/smtlib/v2.7/errors/071_declare-fun_bad_arity_1.smt2
(set-logic ALL)
(declare-sort foo _)
